--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,13 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+@layer components {
+  .position-center {
+    @apply absolute left-[50%] top-[50%] -translate-x-[50%] -translate-y-[50%];
+  }
+  .flex-center {
+    @apply flex items-center justify-center
+  }
 }
